Initial state authentication added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniConvo">
         <activity
-            android:name=".MainActivity3"
-            android:exported="false" />
+            android:name=".Signup"
+            android:exported="true" />
         <activity
             android:name=".MainActivity2"
             android:exported="false" />
